replaced local mongodb with atlas

--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -4,7 +4,7 @@
 
         <% if(user){ %>
             <a href="/addstudent">Add Student</a>
-            <a href="/addinterview">Schedule Interview</a>
+            <a href="/addinterview">Add Interview</a>
             <a href="/report">Download Report</a>
             <a href="/signout">Sign Out</a> 
 
